Wed Feb 23 10:24:02 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Connector.cpp:
          Changed initialization of ACE_Strategy_Connector so that its
          CREATION_STRATEGY and its base class ACE_Connector use reactor
          provided by user instead of the default one returned by
          ACE_Reactor::instance().

Wed Feb 23 10:23:36 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed unneeded options. Minor cleanups.

Wed Feb 23 08:20:01 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_netbsd.GNU:
          Cleanup.

Wed Feb 23 08:12:47 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
        * include/makeinclude/platform_openbsd.GNU:
          Added some flags. Minor cleanups.

Tue Feb 22 12:17:51 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/index.html:
          Updated location of the daily doxygen tree to
          http://doxygen.theaceorb.nl

Mon Feb 21 09:14:55 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
          Removed legacy threads related settings.

Sun Feb 20 11:04:02 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
        * include/makeinclude/platform_gnuwin32_common.GNU:
        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_netbsd.GNU:
        * include/makeinclude/platform_openbsd.GNU:
        * include/makeinclude/platform_win32_interix.GNU:
          Removed CPPFLAGS from SOFLAGS.

Sat Feb 19 09:07:32 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed unneeded compile options

Fri Feb 18 22:20:42 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * ace/Functor_String.h:
        * ace/Functor_String.inl:

          Specialized the string functors for std::string.
