@@ -2344,6 +2344,7 @@ Wendsomde Yameogo <wendsomde at yameogo dot com>
 Shi John <John dot Shi at acxiom dot com>
 Helmut Böing
 Andrew Hill <lists at thefrog dot net>
+Henk Jan Priester <hjpriester at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
